[tool.poetry]
name = "pdf-bot"
version = "0.1.0"
description = "An AI assistant for PDF files"
authors = ["ivan-pua-tpg <ivan.pua@tpgtelecom.com.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain-community = "^0.2.0"
langchain-voyageai = "^0.1.1"
pypdf = "^4.3.1"
python-dotenv = "^1.0.1"
faiss-cpu = "^1.8.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
